Add picture license

--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,16 @@
    </head>
    <body>
       <h1></h1>
-      <img src="<%=require('./media/cool.jpg')%>" alt="" />
+      <figure>
+         <img src="<%=require('./media/cool.jpg')%>" alt="" />
+         <footer>
+            <small>
+               <a
+                  href="https://aminoapps.com/c/sonic/page/blog/pretty-cool-huh/kwa5_ojKhGupBpvDoL8JaEXXPw2wRvXZjJ0"
+               ></a>
+            </small>
+         </footer>
+         <figcaption>Caption goes here</figcaption>
+      </figure>
    </body>
 </html>
