--- a/src/template.html
+++ b/src/template.html
@@ -19,11 +19,10 @@
       <figure>
          <img src="<%=require('./media/cool.jpg')%>" alt="" />
          <footer>
-            <small>
-               <a
-                  href="https://aminoapps.com/c/sonic/page/blog/pretty-cool-huh/kwa5_ojKhGupBpvDoL8JaEXXPw2wRvXZjJ0"
-               ></a>
-            </small>
+            <a
+               href="https://aminoapps.com/c/sonic/page/blog/pretty-cool-huh/kwa5_ojKhGupBpvDoL8JaEXXPw2wRvXZjJ0"
+               ><small>source</small></a
+            >
          </footer>
       </figure>
    </body>
